syntax = "proto3";
package gov.hhs.aspr.ms.taskit.protobuf;

option java_multiple_files = true;
option java_package = "gov.hhs.aspr.ms.taskit.protobuf.input";


message WrapperEnumValue {
    string enumTypeUrl = 1;
    string value = 2;
}